# MetaSpec-Kyocera

./: .gitignore  AGENTS.md  README.md
.github/workflows/: pages.yml
local-infra/runners/: build-docs.sh  gh-pages-setup.sh  gh-workflow-local.sh
reference/: README.md
reference/original-sources/DeepResearchAgent/: .bashrc  AGENTS.md  CHANGELOG.md  Makefile  README.md  f.py  fix  project_registry.json  requirements.txt
reference/original-sources/DeepResearchAgent-main/: .env.template  .gitattributes  .gitignore  .gitmessage  main.py  pyproject.toml
reference/original-sources/DeepResearchAgent-main/.github/workflows/: ci-cd.yml  ci.yml  deploy.yml
reference/original-sources/DeepResearchAgent-main/astro-docs/: astro.config.mjs
reference/original-sources/DeepResearchAgent-main/astro-docs/src/components/: DocumentationCard.astro
reference/original-sources/DeepResearchAgent-main/astro-docs/src/pages/: dashboard.astro  emergency-recovery.astro  index.astro
reference/original-sources/DeepResearchAgent-main/astro-docs/src/styles/: custom.css
reference/original-sources/DeepResearchAgent-main/build_docs/: index.html
reference/original-sources/DeepResearchAgent-main/configs/: base.py  base_cli_fallback.py  config_cli.py  config_gaia.py  config_hle.py  config_oai_deep_research.py
reference/original-sources/DeepResearchAgent-main/examples/: run_hle.py
reference/original-sources/DeepResearchAgent-main/outputs/reports/: migration_validation_report.json
reference/original-sources/DeepResearchAgent-main/scripts/: README.md  astro_data_pipeline.py  auto_build_astro.sh  build_and_deploy_docs.sh  resume_cleanup.sh  setup_git_protection.sh  smoke_logger.py  sync_upstream.sh  test_migration.py  verify_local_setup.sh
reference/original-sources/DeepResearchAgent-main/src/: __init__.py
reference/original-sources/DeepResearchAgent-main/src/agent/: __init__.py  agent.py
reference/original-sources/DeepResearchAgent-main/src/agent/deep_analyzer_agent/: deep_analyzer_agent.py
reference/original-sources/DeepResearchAgent-main/src/agent/deep_researcher_agent/: deep_researcher_agent.py
reference/original-sources/DeepResearchAgent-main/src/agent/general_agent/: general_agent.py
reference/original-sources/DeepResearchAgent-main/src/base/: code_agent.py  multistep_agent.py
reference/original-sources/DeepResearchAgent-main/src/compat/: warnings_filter.py
reference/original-sources/DeepResearchAgent-main/src/config/: cfg.py
reference/original-sources/DeepResearchAgent-main/src/exception/: __init__.py  error.py
reference/original-sources/DeepResearchAgent-main/src/logger/: __init__.py  logger.py  monitor.py
reference/original-sources/DeepResearchAgent-main/src/mcp/: client.py  mcpadapt.py  server.py
reference/original-sources/DeepResearchAgent-main/src/memory/: memory.py
reference/original-sources/DeepResearchAgent-main/src/models/: __init__.py  base.py  cli_models.py  hfllm.py  litellm.py  message_manager.py  models.py  openaillm.py  restful.py
reference/original-sources/DeepResearchAgent-main/src/proxy/: __init__.py
reference/original-sources/DeepResearchAgent-main/src/tools/: auto_browser.py  deep_analyzer.py  deep_researcher.py  oai_deep_research.py  tools.py  web_fetcher.py
reference/original-sources/DeepResearchAgent-main/src/tools/browser/: __init__.py  cdp.py  controller.py
reference/original-sources/DeepResearchAgent-main/src/tools/executor/: local_python_executor.py
reference/original-sources/DeepResearchAgent-main/src/tools/markdown/: mdconvert.py
reference/original-sources/DeepResearchAgent-main/src/tools/search/: __init__.py  baidu_search.py  base.py  ddg_search.py  firecrawl_search.py
reference/original-sources/DeepResearchAgent-main/src/tui/: task_collector.py
reference/original-sources/DeepResearchAgent-main/src/utils/: __init__.py  agent_types.py  function_utils.py  url_utils.py  utils.py
reference/original-sources/DeepResearchAgent-main/tests/integration/: test_config.py  test_image_generator.py  test_mdconverter.py  test_messages.py  test_models.py  test_researcher.py  test_video_generator.py  test_web_fetcher.py  test_web_searcher.py
reference/original-sources/DeepResearchAgent-main/tests/unit/: test_local_python_executor.py
reference/original-sources/DeepResearchAgent-main/tools/development/: debug_terminal.py  test_textual.py
reference/original-sources/DeepResearchAgent-main/tools/emergency/: emergency_cleanup.py
reference/original-sources/MonthlyKyocera/: AGENTS.md  ARCHIVE_SUMMARY.md  LICENSE  README.md  run.sh
reference/original-sources/MonthlyKyocera-main/: guardian-agents-hierarchy.md
reference/original-sources/MonthlyKyocera/project/: AGENT_TEAM_Simplified-mermaid.md  AGENT_TEAM_Simplified.md  CLAUDE.md  README.md  REPOSITORY_INDEX.md  pyproject.toml  requirements-dev.txt  retrieve_archived.py  run.py
web/: astro.config.mjs  package.json  tailwind.config.mjs
web/.astro/: settings.json
web/src/layouts/: DocumentationLayout.astro
web/src/pages/: index.astro
(+372 files in other folders)
